<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newTaskLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backgrounddown"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/backgrounddown"
        android:orientation="vertical"
        android:paddingRight="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >
            
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/newTaskProjectNametext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="Project Name : "
                    android:textColor="#ffff00"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/project_TaskNameBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00ffffff" />
            </LinearLayout>
            
              <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

               <Spinner
                    android:id="@+id/taskParentBox"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" 
                    android:prompt="@string/Parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/newTaskNametext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="Name : "
                    android:textColor="#ffff00"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/taskNameBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00ffffff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/newTaskAbouttext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="About : "
                    android:textColor="#f5ad24"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/taskAboutBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00ffffff"
                    android:inputType="textMultiLine" />
            </LinearLayout>
            
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

               <Spinner
                    android:id="@+id/taskPriorityBox"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" 
                    android:prompt="@string/priority" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/newTaskDeadlinetext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="Deadline : "
                    android:textColor="#f5ad24"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/taskDeadlineBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00ffffff"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

               <Spinner
                    android:id="@+id/taskAssignedBox"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" 
                    android:prompt="@string/assigned" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/TaskButton"
                android:layout_width="148dp"
                android:layout_height="54dp"
                android:background="@drawable/scribble1"
                android:text="Create"
                android:textColor="#05261f"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <DatePicker
            android:id="@+id/taskDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:visibility="invisible" />

    </RelativeLayout>

</RelativeLayout>